Update header text in index.html

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 <body>
 
 <header>
-    <h1>🐱 Recetario de Liz 🐱</h1>
-    <small>¡Hecho con amor y harina! ✨</small>
+    <h1>🐱 Michi Recetas 🐱</h1>
+    <small>¡Hecho con pelos y harina! ✨</small>
 </header>
 
 <div id="contenedor-recetas">
